[project]
name = "wagapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.0",
    "pyroute2>=0.7.12",
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "sqlalchemy>=2.0.0",
    "uv>=0.1.0",
    "uvicorn>=0.28.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]
